# robot_arm_ros2

robot_arm/: CMakeLists.txt  package.xml
robot_arm/include/: arm_attributes.h
robot_arm/launch/: launch.py  robot_arm_launch.xml
robot_arm/src/: forward_kin.cpp  gyro_sensor.cpp  inverse_kin.cpp  motor_control.cpp  set_target.cpp  state_publisher.cpp
robot_arm/urdf/: model.urdf
robot_arm_interfaces/: CMakeLists.txt  package.xml
robot_arm_interfaces/action/: GetArmAngles.action
robot_arm_interfaces/msg/: JointPositions.msg  Result.msg
robot_arm_interfaces/srv/: InverseKin.srv  SetClaw.srv
